Small UI changes improving responsiveness

--- a/remote_files/index.html
+++ b/remote_files/index.html
@@ -63,7 +63,7 @@
             </div>
             <div id="message_field">
                 <form id="message_form">
-                    <textarea id="msg_content" placeholder="Send a message here..." spellcheck="default" wrap="soft" disabled=""></textarea>
+                    <input id="msg_content" placeholder="Send a message here..." spellcheck="default"disabled=""></textarea>
                     <button type="submit" id="msg_submit" disabled="">Send</button>
                 </form>
             </div>
