--- a/remote_files/index.html
+++ b/remote_files/index.html
@@ -14,7 +14,7 @@
                     <input id="login_uname" autocomplete="name"><br>
                     <h2 class="login_error" id="uname_duplicate" hidden="true">The username you entered already exists</h2>
                     <h2 class="login_error" id="connection_timed_out" hidden="true">It seems the connection timed out. Please relog</h2>
-                    <button type="submit">Log In</button>
+                    <button type="submit" disabled="">Log In</button>
                 </form>
             </div>
         </div>
